Am scris motivatia

--- a/DocumentLicenta/Licenta.tex
+++ b/DocumentLicenta/Licenta.tex
@@ -70,12 +70,13 @@ Iunie (fingers crossed), 2020
 \pagenumbering{arabic}
 \setcounter{page}{2}
 \begin{abstract}
-Având in vedere contextul actual, detectarea anomaliilor in video este un subiect de interes in mai multe arii, in mod special in securitatea publică. Aceasta problemă putem spune ca este încă nerezolvată, deoarece sistemele actuale nu depăşesc deocamdata omul cand vine vorba de detectarea anomaliilor. De asemenea, o altă problemă a sistemelor de detectare a anomaliilor în video este nevoia acestora de resurse computaţionale mari in partea de inferența, facând aproape imposibilă rularea acestora direct pe hardware-ul existent al sistemelor de supraveghere video actuale, acolo unde acestea prezinta un maxim interes. Aceasta lucrare îşi propune o implementare al sistemului state-of-the-art la momentul redactării, aşa cum este prezentat de Ionescu et al. \cite{ionescu2019object}. Obiectivul este obţinerea unei arhitecturi serverless si expunerea etapei de inferenţă printr-un API astfel încât convertirea unui sistem de supraveghere clasic într-unul inteligent să devină doar o problemă de implementare, fara a fi nevoie de schimbarea hardware-ului.
+Având in vedere contextul actual, detectarea anomaliilor in video este un subiect de interes in mai multe arii, in mod special in securitatea publică. Aceasta problemă putem spune ca este încă nerezolvată, deoarece sistemele actuale nu depăşesc deocamdata omul cand vine vorba de detectarea anomaliilor. De asemenea, o altă problemă a sistemelor de detectare a anomaliilor în video este nevoia acestora de resurse computaţionale mari in partea de inferența, facând aproape imposibilă rularea acestora direct pe hardware-ul existent al sistemelor de supraveghere video actuale, acolo unde acestea prezinta un maxim interes. Aceasta lucrare îşi propune o implementare al sistemului state-of-the-art la momentul redactării, aşa cum este prezentat de \emph{Ionescu et al.} \cite{ionescu2019object}. Obiectivul este obţinerea unei arhitecturi serverless si expunerea etapei de inferenţă printr-un API astfel încât convertirea unui sistem de supraveghere clasic într-unul inteligent să devină doar o problemă de implementare, fara a fi nevoie de schimbarea hardware-ului. Utilizarea unei arhitecturi serverless bazate pe funcţii stateless in cloud rezolvă problema executării codului on-demand fară complexitatea creeri si intreţinerii unei infrastructuri de maşini virtuale sau fizice. Numeroase lucrări din domeniu \cite{christidis2019}, \cite{wang2019} arată ca rularea algoritmilor de machine learning folosind soluţii FaaS (Function as a service) precum AWS Lambda sau Google cloud functions, este în sine o problemă ce necesită soluţii de optimizare a codului pentru a indeplini restricţiile soluţiilor de rulare in cloud. 
 \end{abstract}
 
 \chapter{Introducere}
 \section{Motivatie}
-\blindtext[1]
+Detectarea anomaliilor in video este in strânsă legatură cu sistemele de supraveghere inteligente,un domeniu care a fost si este de interes pentru mine. La rândul lor, sistemele de supraveghere inteligente, au o mare importanţă in securitatea publică. Cred că cu toţii ne dorim o lume in care apelurile de urgenţă in caz de incendiu se fac automat, alunecările de teren sunt descoperite înainte să fie prea târziu, iar oamenii rău intenţionaţi sunt opriţi inainte să se întâmple tragedii. Pe lângă partea algoritmica a detectării anomaliilor, o alta arie de interes a acestei lucrări este cloud computing. Această parte analizează un nou mod de rulare, ce facilitează atât dezvoltarea cât si execuţia ulterioară a unor sisteme complexe. Acest nou mod constă in folosirea unei arhitecturi serverless, ce oferă dezvoltatorului posibilitatea să creeze sisteme ce necesită multe resurse in timpul rulării, fara costurile asociate creeri si menţinerii unei infrastructuri proprii. Pe de altă parte, având in vedere că toate operaţiunile sunt executate in cloud, utilizatorii serviciului au nevoie doar de conexiune la internet şi cerinţe minime pentru sistemele proprii, fara a fi nevoiţi să achiziţioneze echipamente noi pentru a folosi sisteme de detecţie a anomaliilor.
+\section{Prezentare generală}
 
 \chapter{Plictiseala}
 \blindtext[3]
