--- a/DocumentLicenta/References.bib
+++ b/DocumentLicenta/References.bib
@@ -1,1 +1,25 @@
-@article{ionescu2019object,  author={R. T. {Ionescu} and F. S. {Khan} and M. {Georgescu} and L. {Shao}},  booktitle={2019 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},  title={Object-Centric Auto-Encoders and Dummy Anomalies for Abnormal Event Detection in Video},   year={2019},  volume={},  number={},  pages={7834-7843}}
+@article{ionescu2019object,  
+author={R. T. {Ionescu} and F. S. {Khan} and M. {Georgescu} and L. {Shao}}, 
+ booktitle={2019 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},  
+title={Object-Centric Auto-Encoders and Dummy Anomalies for Abnormal Event Detection in Video},
+   year={2019},  
+volume={},  
+number={},  
+pages={7834-7843}}
+
+@article{christidis2019, 
+author={A. {Christidis} and R. {Davies} and S. {Moschoyiannis}},
+ booktitle={2019 IEEE 12th Conference on Service-Oriented Computing and Applications (SOCA)}, 
+title={Serving Machine Learning Workloads in Resource Constrained Environments: a Serverless Deployment Example},
+ year={2019}, 
+volume={},
+ number={}, 
+pages={55-63}}
+
+@article{wang2019, 
+author={H. {Wang} and D. {Niu} and B. {Li}}, 
+booktitle={IEEE INFOCOM 2019 - IEEE Conference on Computer Communications}, 
+title={Distributed Machine Learning with a Serverless Architecture}, year={2019}, 
+volume={}, 
+number={}, 
+pages={1288-1296}}
