Am scris 1 pagina in introducere

--- a/DocumentLicenta/References.bib
+++ b/DocumentLicenta/References.bib
@@ -23,3 +23,21 @@ title={Distributed Machine Learning with a Serverless Architecture}, year={2019}
 volume={}, 
 number={}, 
 pages={1288-1296}}
+
+@article{cheng2015, 
+author={K. {Cheng} and Y. {Chen} and W. {Fang}}, 
+booktitle={2015 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)}, 
+title={Video anomaly detection and localization using hierarchical feature representation and Gaussian process regression}, 
+year={2015}, 
+volume={}, 
+number={}, 
+pages={2909-2917}}
+
+@article{sultani2018, 
+author={W. {Sultani} and C. {Chen} and M. {Shah}}, 
+booktitle={2018 IEEE/CVF Conference on Computer Vision and Pattern Recognition}, 
+title={Real-World Anomaly Detection in Surveillance Videos}, 
+year={2018}, 
+volume={}, 
+number={}, 
+pages={6479-6488}}
