Am terminat introducerea

--- a/DocumentLicenta/References.bib
+++ b/DocumentLicenta/References.bib
@@ -41,3 +41,25 @@ year={2018},
 volume={}, 
 number={}, 
 pages={6479-6488}}
+
+@article{jonas2019cloud,
+  title={Cloud programming simplified: A berkeley view on serverless computing},
+  author={Jonas, Eric and Schleier-Smith, Johann and Sreekanti, Vikram and Tsai, Chia-Che and Khandelwal, Anurag and Pu, Qifan and Shankar, Vaishaal and Carreira, Joao and Krauth, Karl and Yadwadkar, Neeraja and others},
+  journal={arXiv preprint arXiv:1902.03383},
+  year={2019}
+}
+
+@misc{2020keras,
+  title={Keras description},
+  author={Chollet, Fran\c{c}ois and others},
+  year={2020},
+  month={04},
+  URL = {https://keras.io}
+}
+
+@article{fox2017status,
+  title={Status of serverless computing and function-as-a-service (faas) in industry and research},
+  author={Fox, Geoffrey C and Ishakian, Vatche and Muthusamy, Vinod and Slominski, Aleksander},
+  journal={arXiv preprint arXiv:1708.08028},
+  year={2017}
+}
