--- a/DocumentLicenta/References.bib
+++ b/DocumentLicenta/References.bib
@@ -63,3 +63,46 @@ pages={6479-6488}}
   journal={arXiv preprint arXiv:1708.08028},
   year={2017}
 }
+
+@book{flask2014,
+author = {Grinberg, Miguel},
+title = {Flask Web Development: Developing Web Applications with Python},
+year = {2014},
+isbn = {1449372627},
+publisher = {O’Reilly Media, Inc.},
+edition = {1st}
+}
+
+
+@misc{2020EC2,
+  title={Amazon EC2 description},
+  year={2020},
+  month={04},
+  day={25},
+  URL = {https://aws.amazon.com/ec2/}
+}
+
+
+@misc{2020S3,
+  title={Amazon S3 description},
+  year={2020},
+  month={04},
+  day={25},
+  URL = {https://aws.amazon.com/s3/}
+}
+
+@misc{2020autoscaling,
+  title={Amazon autoscaling description},
+  year={2020},
+  month={04},
+  day={25},
+  URL = {https://aws.amazon.com/autoscaling/}
+}
+
+@misc{2020elb,
+  title={Amazon elastic load balancing description},
+  year={2020},
+  month={04},
+  day={25},
+  URL = {https://aws.amazon.com/elasticloadbalancing/}
+}
